Thu Oct 10 17:50:24 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* Makefile.in (headers): Include rgx.h in the distribution.

Sun Oct  6 06:20:46 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* rgx.c (scm_regexec): Changed the default return type to be
 	similar to regexec in guile-iii: a newly allocated vector with
 	match indices.  This provides all the information required: the
 	justification for the all the other return types is presumably
 	efficiency.  A list of strings is now returned by passing a string
 	for match_pick.

	See ../doc/regex.txt.

	* rgx.h: new file.

	* rgx.c (scm_init_rgx): intern various regexp control symbols,
	REG_EXTENDED etc.
	Use K&R function definitions, include rgx.h.

Thu Oct  3 00:37:59 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* rgx.c (print_regex_t, print_dfa_t): Change 'writing' argument to
	be a general print state, in accordance with new smob interface.

Sat Sep 28 04:51:33 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* rgx.c: define scm_regex_error_key.
	(scm_regex_error): new procedure.
	(scm_init_rgx): add feature "regex".
	include libguile/feature.h.
	(scm_regcomp, scm_regexec, scm_regexp_to_dfa): use scm_regex_error
	instead of returning the error status.
	(scm_regcomp): use scm_memory_error for allocation errors.
	(scm_regexec): delete useless code assigning to starts and ends.
	Return something useful when match_pick is #t or undefined.
	Fix pmatch[i].rm_so >= 0 check when match_pick is a vector.

	* PLUGIN/guile.config: add librx.a to xtra_dependencies.

Wed Sep 11 14:39:47 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* Makefile.in (ALL_CFLAGS): Delete reference to libguile header
	directory; @opt_cflags@ is supposed to provide that.
	* configure.in: Include '-I..' in opt_cflags, if we're being
	compiled as part of libguile.  No need to give '-I../libguile'.

Tue Sep 10 16:56:33 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* rgx.c: #include smob.h, mallocs.h, and chars.h.  Use